# Mooc

./: .gitignore  Dockerfile  Notes avancement Mooc.xopp  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  webpack.mix.js
.github/workflows/: deploy.yml
docs/: MOOC_models.drawio  MOOC_users.md
mooc/: pytest.ini
mooc/apps/home/: admin.py  context.py  init_instances.py  models.py  urls.py  views.py
mooc/apps/home/migrations/: 0001_initial.py  0002_defaultcontent_explication_libelles_explication.py  0003_alter_defaultcontent_fichier_and_more.py
mooc/apps/home/tests/: context_tests.py
mooc/apps/progress/: admin.py  context.py  models.py  session.py  urls.py  views.py
mooc/apps/progress/migrations/: 0001_initial.py  0002_alter_tutoprogress_tuto_alter_tutoprogress_user.py  0002_initial.py  0003_initial.py
mooc/apps/tuto/: admin.py  models.py  parse_post.py  permission.py  update_data.py  urls.py  views.py
mooc/apps/tuto/migrations/: 0001_initial.py  0002_initial.py  0002_tutorial_restriction.py  0003_alter_tutorial_restriction.py  0004_content_video_alter_content_contenttype.py  (+2 more)
mooc/apps/user/: OpenID.py  admin.py  display_session.py  forms.py  middleware.py  models.py  session.py  views.py
mooc/mooc/: asgi.py  urls.py  wsgi.py
mooc/mooc/settings/: __init__.py  base.py  develop.example.py  production.example.py
mooc/mooc/tests/: temporary_media_files.py
mooc/static/assets/: drag.css  set_form.js
mooc/templates/: alert_box.html  base.html
mooc/theme/static_src/: package-lock.json  tailwind.config.js
(+31 files in other folders)
